--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -38,7 +38,7 @@
 // type utilities
 
 @mixin sans {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "adelle", sans-serif;
 }
 
 @mixin sans_light {
